--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,8 +20,8 @@ body {
   background-color: #f1f5f9;
 }
 .card {
-  width: 180px;
-  height: 254px;
+  width: 200px;
+  height: 294px;
   padding: 0.8em;
   position: relative;
   overflow: visible;
@@ -34,7 +34,12 @@ body {
   border-radius: 0.5rem;
   cursor: pointer;
 }
-
+.card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
 .card-info {
   padding-top: 10%;
   cursor: pointer;
@@ -55,7 +60,6 @@ svg {
 
 .text-title:hover {
   text-decoration: italic;
-  font-weight: 800;
 }
 .text-body {
   font-size: 0.9em;
@@ -183,7 +187,7 @@ svg {
   margin-left: 1px;
   font-size: 11px;
   text-decoration: underline;
-  text-decoration-color: #f79918;;
+  text-decoration-color: #f79918;
   color: #f79918;
   cursor: pointer;
   font-weight: 800;
@@ -223,7 +227,6 @@ svg {
   border: 2px solid #747474;
 }
 
-
 .google-icon {
   font-size: 18px;
   margin-bottom: 1px;
@@ -231,12 +234,12 @@ svg {
 
 .close-btn {
   background-color: transparent;
-  border: none; 
+  border: none;
   font-size: 20px;
   cursor: pointer;
   top: 10px;
   right: 10px;
-  color: #000; 
+  color: #000;
   transition: all 0.3s ease;
 }
 
